modified issues til transaction
