# app/controller/transactions.go
@@ -4,19 +4,20 @@ import (
 	"accounts/api/app/model"
 	"accounts/api/service"
 	"strconv"
+	"strings"
 
 	"github.com/gofiber/fiber/v2"
 )
 
 // AddWallet method for adding wallet to the corresponding user.
 //
-//	@Description	오프체인 송금 API 입니다.
-//	@Summary		오프체인 송금 API
+//	@Description	온/오프체인 송금 API 입니다. 온/오프체인 기록을 전송하고 싶을 경우 body에 추가.
+//	@Summary		온/오프체인 송금 API
 //	@Tags			Transaction
 //	@Accept			json
 //	@Produce		json
 //	@Param			Authorization	header	string	true	"액세스 토큰"
-//	@Param			wallet	body		model.Transfer		true	"송금 시도 시 필요한 body 값"
+//	@Param			wallet	body		model.RECVTransfer		true	"송금 시도 시 필요한 body 값"
 //	@Success		200		{object}	[]string{}
 //	@Router			/v1/tx/transfer [post]
 func TransferBalance(c *fiber.Ctx) error {
@@ -29,7 +30,7 @@ func TransferBalance(c *fiber.Ctx) error {
 			"data":   err.Error(),
 		})
 	}
-	var txBody *model.Transfer
+	var txBody *model.RECVTransfer
 
 	if err := c.BodyParser(&txBody); err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
@@ -38,6 +39,7 @@ func TransferBalance(c *fiber.Ctx) error {
 			"data":   err.Error(),
 		})
 	}
+
 	if err := service.TransferBalance(int32(userID), int32(txBody.Target), int32(txBody.ServiceID), txBody.OnchainEvent, txBody.OffchainEvent, txBody.SecPw); err != nil {
 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
 			"status": "error",
@@ -51,40 +53,6 @@ func TransferBalance(c *fiber.Ctx) error {
 		"msg":    "Service created successfully",
 	})
 }
-
-// func TransferOnchain(c *fiber.Ctx) error {
-// 	var reqBody *model.TransferOnchain
-// 	if len(reqBody.Amount) != len(reqBody.Sender) {
-// 		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
-// 			"status": "error",
-// 			"msg":    "length of sending info doesnt match",
-// 		})
-
-// 	}
-// 	for i, el := range reqBody.Sender {
-// 		//get PrivateKey of such Address from el
-// 		var privateKey string
-// 		// PK part should be implemented
-// 		privateKey = el
-// 		if err := chain.Transfer(privateKey, reqBody.Target, reqBody.Amount[i], int32(reqBody.ServiceID)); err != nil {
-// 			return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
-// 				"status": "error",
-// 				"msg":    "error on sending transaction",
-// 				"data":   err,
-// 			})
-// 		}
-// 	}
-// 	if err := c.BodyParser(&reqBody); err != nil {
-// 		return c.Status(fiber.StatusCreated).JSON(fiber.Map{
-// 			"status": "error",
-// 			"msg":    "unidentified userId",
-// 			"data":   err.Error(),
-// 		})
-// 	}
-// 	return c.Status(fiber.StatusOK).JSON(fiber.Map{
-// 		"status": "OK",
-// 	})
-// }
 
 func TransferFromBalance(c *fiber.Ctx) error {
 	return c.Status(fiber.StatusCreated).JSON(fiber.Map{
@@ -100,19 +68,126 @@ func BalanceOf(c *fiber.Ctx) error {
 	})
 }
 
+// AddWallet method for adding wallet to the corresponding user.
+//
+//	@Description	거래내역 조회 API 입니다. 상세 거래내역 조회를 통해 상세 내역을 확인할 수 있습니다.
+//	@Summary		거래내역 조회 API
+//	@Tags			Transaction
+//	@Accept			json
+//	@Produce		json
+//	@Param			Authorization	header	string	true	"액세스 토큰"
+//	@Param			lim	query	string	false	"조회 limit"
+//	@Param			off	query	string	false	"조회 offset"
+//	@Success		200	{object}	[]string{}
+//	@Router			/v1/tx/history [get]
 func TransferHistory(c *fiber.Ctx) error {
-	userID, err := strconv.Atoi(c.Locals("userID").(string))
-	sessionKey := c.Locals("newSessionKey")
+	userID := c.Locals("userID").(string)
+	lim := strings.ReplaceAll(c.Query("lim"), " ", "")
+	off := strings.ReplaceAll(c.Query("off"), " ", "")
+	var respdata []model.TransactionsList
+	if lim == "" {
+		lim = "10"
+	}
+	if off == "" {
+		off = "0"
+	}
+
+	if _, ok := strconv.Atoi(lim); ok != nil {
+		return c.Status(fiber.StatusCreated).JSON(fiber.Map{
+			"status": "error",
+			"msg":    "given limit value is incorrect",
+			"data":   ok.Error(),
+		})
+	}
+
+	if _, ok := strconv.Atoi(off); ok != nil {
+		return c.Status(fiber.StatusCreated).JSON(fiber.Map{
+			"status": "error",
+			"msg":    "given offset value is incorrect",
+			"data":   ok.Error(),
+		})
+	}
+
+	result, err := service.TransactionHistory(userID, lim, off)
 	if err != nil {
 		return c.Status(fiber.StatusCreated).JSON(fiber.Map{
 			"status": "error",
-			"msg":    "unidentified userId",
+			"msg":    "error on fetching history",
 			"data":   err.Error(),
 		})
 	}
+
+	for _, row := range result {
+		isNative := false
+		if row.IsNative.Int32 == 1 {
+			isNative = true
+		}
+		respdata = append(respdata, model.TransactionsList{
+			TransactionID: row.ID,
+			FromID:        row.FromID,
+			ToID:          row.ToID,
+			Memo:          row.Memo.String,
+			TotalAmount:   row.TotalAmount,
+			TokenInfo: model.TokenInfo{
+				Name:       row.Name.String,
+				Symbol:     row.Symbol.String,
+				Decimals:   row.Decimals.Int32,
+				Image:      row.Image.String,
+				IsNative:   isNative,
+				NetType:    row.NetType.String,
+				WalletType: row.WalletType.String,
+			},
+		})
+	}
+
 	return c.Status(fiber.StatusOK).JSON(fiber.Map{
-		"status":     "OK",
-		"sessionKey": sessionKey,
-		"userId":     userID,
+		"status": "OK",
+		"data":   respdata,
+	})
+}
+
+// AddWallet method for adding wallet to the corresponding user.
+//
+//	@Description	거래내역 상세 조회 API 입니다. 상세 거래내역 조회를 통해 상세 내역을 확인할 수 있습니다.
+//	@Summary		거래내역 상세 조회 API
+//	@Tags			Transaction
+//	@Accept			json
+//	@Produce		json
+//	@Param			id				path	string	true	"트랜잭션 ID 값"
+//	@Success		200	{object}	[]string{}
+//	@Router			/v1/tx/history/detail/{id} [get]
+func TransactionHistoryDetail(c *fiber.Ctx) error {
+	id, err := strconv.Atoi(c.Params("id"))
+	if err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"status": "error",
+			"msg":    "error on transaction id conversion",
+		})
+	}
+	result, err := service.TransactionDetail(int32(id))
+	if err != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"status": "error",
+			"msg":    "error on fetching details",
+		})
+	}
+	var respdata []model.TransactionDetail
+	for _, row := range result {
+		isOnChain := false
+		if row.IsOnchain == 1 {
+			isOnChain = true
+		}
+		respdata = append(respdata, model.TransactionDetail{
+			From:      row.From,
+			To:        row.To,
+			Amount:    row.Amount,
+			IsOnchain: isOnChain,
+			Txhash:    row.Txhash.String,
+			Status:    row.Status,
+		})
+	}
+	return c.Status(fiber.StatusOK).JSON(fiber.Map{
+		"status": "OK",
+		"data":   respdata,
 	})
 }
